adding_demo_script

--- a/script_processing.ipynb
+++ b/script_processing.ipynb
@@ -112,9 +112,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'striprtf'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/home/hugo/Desktop/Theatre_Script_Processing/script_processing.ipynb Cell 7\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/hugo/Desktop/Theatre_Script_Processing/script_processing.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mre\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/hugo/Desktop/Theatre_Script_Processing/script_processing.ipynb#W6sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mstriprtf\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mstriprtf\u001b[39;00m \u001b[39mimport\u001b[39;00m rtf_to_text\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/hugo/Desktop/Theatre_Script_Processing/script_processing.ipynb#W6sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# Open the RTF file for reading\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/hugo/Desktop/Theatre_Script_Processing/script_processing.ipynb#W6sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m Name \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'striprtf'"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "from striprtf.striprtf import rtf_to_text\n",
@@ -198,6 +210,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### For TWATC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Create a csv file with predictions from BERT"
    ]
   },
@@ -210,16 +229,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/hugo/Desktop/Projects/MSERT/.env/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/hugo/Desktop/Theatre_Script_Processing/.env/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/Users/hugo/Desktop/Projects/MSERT/.env/lib/python3.11/site-packages/transformers/pipelines/text_classification.py:105: UserWarning: `return_all_scores` is now deprecated,  if want a similar functionality use `top_k=None` instead of `return_all_scores=True` or `top_k=1` instead of `return_all_scores=False`.\n",
+      "2023-11-16 11:18:22.708349: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2023-11-16 11:18:22.708439: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2023-11-16 11:18:22.736931: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2023-11-16 11:18:22.801858: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-11-16 11:18:23.913901: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+      "/home/hugo/Desktop/Theatre_Script_Processing/.env/lib/python3.10/site-packages/transformers/pipelines/text_classification.py:105: UserWarning: `return_all_scores` is now deprecated,  if want a similar functionality use `top_k=None` instead of `return_all_scores=True` or `top_k=1` instead of `return_all_scores=False`.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -241,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,6 +369,196 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No!\n",
+      "Hands up!\n",
+      "Calm down, you see, I'm unarmed ... Now please put your gun down.\n",
+      "Well no, you see. Your cat seems to be better educated than you, apparently...\n",
+      "I don't go out much... and I never look at those kinds of ads. Besides, I'm not very good at recognizing cats...\n",
+      "No, I hate the concept of pets. And the concept of domestication in general, for that matter.  I myself have remained wild...\n",
+      "No, I haven't seen your vegan cat. And if you allow me, I think this absurd conversation has lasted long enough.\n",
+      "Thank you.\n",
+      "You had a gun at your head.\n",
+      "That's none of your business... I don't even know why I'm talking about all this with you, I don't know you... And by the way, why are you still here?\n",
+      "Excuse me, it'll pass... Do you have a glass of water?\n",
+      "Sit down for a second, I'll get you that...\n",
+      "Thank you...\n",
+      "Yes, thank you...\n",
+      "Something tells me that you already knew that before breaking into my house by forcing my door, am I wrong?\n",
+      "I don't write anything at all. It is a legend maintained by my publisher so that I am not completely forgotten, and my old books continue to 10 sell a bit. Anyway, I will not give any interview. Not to you or anyone else.  approaches her with a threatening look.) Now get out!\n",
+      "No!\n",
+      "Go back where you came from on your pedalo if you wish, it's not my problem...\n",
+      "I'm not pretending, I assure you.\n",
+      "I promise.\n",
+      "I have a heart disease. Doctors have given me only a few years to live. Maybe just a few months. That's why I came to France to fulfill one last dream. To meet you...\n",
+      "At the slightest upset, my heart races, and it can stop beating.\n",
+      "I don't have time for doubt anymore. That's why I forced your door...\n",
+      "That doesn't mean it's true...\n",
+      "I immediately noticed that portrait when I entered your place earlier... and I had the feeling that I recognized that face.\n",
+      "Sorry, I shouldn't have said that.\n",
+      "Well, you have to die from something.\n",
+      "To your health! Sorry, I think I've put my foot in it again...\n",
+      "Still, it tastes strange. Are you sure it's cognac?\n",
+      "Tell me at least what your book is about...\n",
+      "Where is this manuscript?\n",
+      "Can I see it?\n",
+      "No!\n",
+      "Well, you're right after all. You really are an old grump. I'll let you wallow in self-pity...\n",
+      "Wait...\n",
+      "Take it or leave it.\n",
+      "I leave you to your reading...\n",
+      "No, I assure you...\n",
+      "I don't know... Something tells me that you didn't just come to Paris to do a thesis on an outdated writer.\n",
+      "And the gun?\n",
+      "Why did you say her face looked familiar to you?\n",
+      "I'm her granddaughter.\n",
+      "I'm here.\n",
+      "So I have a daughter...\n",
+      "It's not quite the end yet...  Are you okay?\n",
+      "But here I'm ... I hardly knew my mother. I'm finding a grandfather.\n",
+      "My grandmother came with me. She's in the apartment across the courtyard.\n",
+      "I still love her... This book is the proof of that...\n",
+      "She crossed the Atlantic to find me. I can cross the hallway to go to her...\n",
+      "I'll let you go alone. You will see. Almost nothing has changed behind the window across the courtyard. And the door is still open...\n",
+      "602\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "# Specify the file path\n",
+    "file_path = '/home/hugo/Desktop/Theatre_Script_Processing/script/not_processed/TheWindowAcrossTheCourtyard.txt'\n",
+    "characters = [\"Madison\", \"Alexandre\"]\n",
+    "# Open the file in read mode ('r' for reading)\n",
+    "script = pd.DataFrame(columns = ['idx','type','character','sentence','j-hartmann/emotion-english-distilroberta-base','SamLowe/roberta-base-go_emotion', \"michellejieli/emotion_text_classifier\"])\n",
+    "idx = 0\n",
+    "consigne = \"\"\n",
+    "reply = \"\"\n",
+    "character_is_speaking_bool = False\n",
+    "char_speaking = \"\"\n",
+    "with open(file_path, 'r') as file:\n",
+    "    # Read the contents of the file\n",
+    "     \n",
+    "    \n",
+    "    for line in file :\n",
+    "    \n",
+    "        if not isinstance(line[0],int) :\n",
+    "            line = line.replace('\\n', '')\n",
+    "            if line[0] == '*':\n",
+    "                if character_is_speaking_bool == True :\n",
+    "\n",
+    "                    print(reply)\n",
+    "                    character_is_speaking_bool = False\n",
+    "                    script.at[idx, 'type' ] = 'speech'\n",
+    "                    script.at[idx, 'character' ] = char_speaking\n",
+    "                    script.at[idx, 'j-hartmann/emotion-english-distilroberta-base' ] = prediction(reply, classifier)\n",
+    "                    script.at[idx, 'SamLowe/roberta-base-go_emotion' ] = prediction_2(reply)\n",
+    "                    script.at[idx, 'michellejieli/emotion_text_classifier' ] = prediction_3(reply)\n",
+    "                    script.at[idx,'sentence'] = reply\n",
+    "                    reply = \"\"\n",
+    "                    idx += 1\n",
+    "\n",
+    "                consigne = consigne  + line.replace('*','')\n",
+    "\n",
+    "                if line[-1] == '*' :\n",
+    "                    \n",
+    "                    script.at[idx,'sentence'] = consigne\n",
+    "                    script.at[idx, 'type' ] = 'consigne'\n",
+    "                    consigne = \"\"\n",
+    "                    idx += 1\n",
+    "                \n",
+    "                \n",
+    "                    \n",
+    "                \n",
+    "            \n",
+    "            if line.split(' ')[0] in characters or character_is_speaking_bool :\n",
+    "                \n",
+    "                \n",
+    "                line_processed = line.split(' – ')[-1]\n",
+    "                # if line[0] ==  ' – ' :\n",
+    "                #     line = line[1:]\n",
+    "               \n",
+    "                if '(' in line_processed :\n",
+    "                    new_line = \"\"\n",
+    "                    not_copying = False\n",
+    "                    for char in line_processed :\n",
+    "                        if char == '(' :\n",
+    "                            not_copying = True\n",
+    "                        \n",
+    "                        if not not_copying :\n",
+    "                            new_line = new_line + char\n",
+    "                        \n",
+    "                        if char == ')' :\n",
+    "                            not_copying = False\n",
+    "\n",
+    "                    line_processed = new_line\n",
+    "                \n",
+    "                \n",
+    "\n",
+    "                if line.split(' ')[0] != char_speaking and line.split(' ')[0] in characters and character_is_speaking_bool == True:\n",
+    "                    script.at[idx, 'type' ] = 'speech'\n",
+    "                    script.at[idx, 'character' ] = char_speaking\n",
+    "                    script.at[idx, 'j-hartmann/emotion-english-distilroberta-base' ] = prediction(reply, classifier)\n",
+    "                    script.at[idx, 'SamLowe/roberta-base-go_emotion' ] = prediction_2(reply)\n",
+    "                    script.at[idx, 'michellejieli/emotion_text_classifier' ] = prediction_3(reply)\n",
+    "                    script.at[idx,'sentence'] = reply\n",
+    "                    reply = \"\"\n",
+    "                    idx += 1\n",
+    "                    \n",
+    "                if not line.split(' ')[0] in characters :\n",
+    "                    reply = reply + ' ' + line_processed \n",
+    "                else :\n",
+    "                    reply = line_processed\n",
+    "\n",
+    "                if line.split(' ')[0] in characters :\n",
+    "                    character_is_speaking_bool = True \n",
+    "                    char_speaking = line.split(' ')[0]\n",
+    "\n",
+    "               \n",
+    "                \n",
+    "\n",
+    "\n",
+    "script.to_csv('script/processed/TWATC_processed.csv', index = False)\n",
+    "print(idx)\n",
+    "# Print or process the file contents as needed\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "txt = \"Madison – I have a heart disease. Doctors have given me only a few years to\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Madison ', ' I have a heart disease. Doctors have given me only a few years to']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(txt.split('–'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -366,7 +581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
